parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    EXPLAMATION
    INTERROGATION
    MOD

Grammar

Rule 0     S' -> program
Rule 1     program -> program program
Rule 2     program -> variable_Declaration
Rule 3     program -> statement
Rule 4     program -> comment
Rule 5     statement -> for_statement
Rule 6     statement -> while_statement
Rule 7     statement -> if_statement
Rule 8     statement -> switch_statement
Rule 9     comment -> COD_COMMENT
Rule 10    comment -> COMMENT_MONOLINE
Rule 11    variable_Declaration -> type sequence_variable SEMICOLON
Rule 12    type -> FLOAT
Rule 13    type -> INT
Rule 14    type -> CHAR
Rule 15    sequence_variable -> variable_characteristics COMMA sequence_variable
Rule 16    sequence_variable -> variable_characteristics
Rule 17    variable_characteristics -> NAME LCOLC NUMBER RCOLC
Rule 18    variable_characteristics -> NAME ASSIGN expression
Rule 19    variable_characteristics -> NAME ASSIGN NUMBER POINT NUMBER
Rule 20    variable_characteristics -> NAME ASSIGN NUMBER
Rule 21    variable_characteristics -> NAME
Rule 22    variable_characteristics -> expression
Rule 23    if_statement -> IF LPAREN expression RPAREN LBRACE block RBRACE ELSE LBRACE block RBRACE
Rule 24    if_statement -> IF LPAREN expression RPAREN LBRACE block RBRACE
Rule 25    while_statement -> WHILE LPAREN expression RPAREN LBRACE block RBRACE
Rule 26    for_statement -> FOR LPAREN type NAME ASSIGN expression SEMICOLON expression SEMICOLON down_up RPAREN LBRACE block RBRACE
Rule 27    switch_statement -> SWITCH LPAREN NAME RPAREN LBRACE body_case body_case body_case sintax_default RBRACE
Rule 28    switch_statement -> SWITCH LPAREN NAME RPAREN LBRACE body_case body_case sintax_default RBRACE
Rule 29    switch_statement -> SWITCH LPAREN NAME RPAREN LBRACE body_case sintax_default RBRACE
Rule 30    body_case -> CASE sintax_case
Rule 31    sintax_case -> expression COLON LBRACE block break_statement RBRACE
Rule 32    sintax_default -> DEFAULT COLON LBRACE block RBRACE
Rule 33    sintax_default -> empty
Rule 34    down_up -> NAME MINUS MINUS
Rule 35    down_up -> NAME PLUS PLUS
Rule 36    down_up -> NAME ASSIGN expression
Rule 37    down_up -> expression
Rule 38    expression -> expression BIGGER expression
Rule 39    expression -> expression SMALLER expression
Rule 40    expression -> expression BIGGEREQUALS expression
Rule 41    expression -> expression SMALLEREQUALS expression
Rule 42    expression -> expression EQUALS expression
Rule 43    expression -> expression DIFF expression
Rule 44    expression -> expression AND expression
Rule 45    expression -> expression OR expression
Rule 46    expression -> expression PLUS expression
Rule 47    expression -> expression MINUS expression
Rule 48    expression -> expression TIMES expression
Rule 49    expression -> expression DIVIDE expression
Rule 50    expression -> variable SUMEQUALS expression
Rule 51    expression -> variable MINUSEQUALS expression
Rule 52    expression -> variable TIMESEQUALS expression
Rule 53    expression -> variable DIVIDEEQUALS expression
Rule 54    expression -> literal
Rule 55    expression -> variable
Rule 56    literal -> NORMALSTRING
Rule 57    literal -> NUMBER
Rule 58    variable -> NAME
Rule 59    block -> blockderivacao
Rule 60    blockderivacao -> variable_Declaration list_Declarations
Rule 61    blockderivacao -> sequence_variable SEMICOLON list_Declarations
Rule 62    list_Declarations -> variable_Declaration list_Declarations
Rule 63    list_Declarations -> sequence_variable SEMICOLON list_Declarations
Rule 64    list_Declarations -> empty
Rule 65    empty -> <empty>
Rule 66    break_statement -> BREAK SEMICOLON

Terminals, with rules where they appear

AND                  : 44
ASSIGN               : 18 19 20 26 36
BIGGER               : 38
BIGGEREQUALS         : 40
BREAK                : 66
CASE                 : 30
CHAR                 : 14
COD_COMMENT          : 9
COLON                : 31 32
COMMA                : 15
COMMENT_MONOLINE     : 10
DEFAULT              : 32
DIFF                 : 43
DIVIDE               : 49
DIVIDEEQUALS         : 53
ELSE                 : 23
EQUALS               : 42
EXPLAMATION          : 
FLOAT                : 12
FOR                  : 26
IF                   : 23 24
INT                  : 13
INTERROGATION        : 
LBRACE               : 23 23 24 25 26 27 28 29 31 32
LCOLC                : 17
LPAREN               : 23 24 25 26 27 28 29
MINUS                : 34 34 47
MINUSEQUALS          : 51
MOD                  : 
NAME                 : 17 18 19 20 21 26 27 28 29 34 35 36 58
NORMALSTRING         : 56
NUMBER               : 17 19 19 20 57
OR                   : 45
PLUS                 : 35 35 46
POINT                : 19
RBRACE               : 23 23 24 25 26 27 28 29 31 32
RCOLC                : 17
RPAREN               : 23 24 25 26 27 28 29
SEMICOLON            : 11 26 26 61 63 66
SMALLER              : 39
SMALLEREQUALS        : 41
SUMEQUALS            : 50
SWITCH               : 27 28 29
TIMES                : 48
TIMESEQUALS          : 52
WHILE                : 25
error                : 

Nonterminals, with rules where they appear

block                : 23 23 24 25 26 31 32
blockderivacao       : 59
body_case            : 27 27 27 28 28 29
break_statement      : 31
comment              : 4
down_up              : 26
empty                : 33 64
expression           : 18 22 23 24 25 26 26 31 36 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 51 52 53
for_statement        : 5
if_statement         : 7
list_Declarations    : 60 61 62 63
literal              : 54
program              : 1 1 0
sequence_variable    : 11 15 61 63
sintax_case          : 30
sintax_default       : 27 28 29
statement            : 3
switch_statement     : 8
type                 : 11 26
variable             : 50 51 52 53 55
variable_Declaration : 2 60 62
variable_characteristics : 15 16
while_statement      : 6

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . program program
    (2) program -> . variable_Declaration
    (3) program -> . statement
    (4) program -> . comment
    (11) variable_Declaration -> . type sequence_variable SEMICOLON
    (5) statement -> . for_statement
    (6) statement -> . while_statement
    (7) statement -> . if_statement
    (8) statement -> . switch_statement
    (9) comment -> . COD_COMMENT
    (10) comment -> . COMMENT_MONOLINE
    (12) type -> . FLOAT
    (13) type -> . INT
    (14) type -> . CHAR
    (26) for_statement -> . FOR LPAREN type NAME ASSIGN expression SEMICOLON expression SEMICOLON down_up RPAREN LBRACE block RBRACE
    (25) while_statement -> . WHILE LPAREN expression RPAREN LBRACE block RBRACE
    (23) if_statement -> . IF LPAREN expression RPAREN LBRACE block RBRACE ELSE LBRACE block RBRACE
    (24) if_statement -> . IF LPAREN expression RPAREN LBRACE block RBRACE
    (27) switch_statement -> . SWITCH LPAREN NAME RPAREN LBRACE body_case body_case body_case sintax_default RBRACE
    (28) switch_statement -> . SWITCH LPAREN NAME RPAREN LBRACE body_case body_case sintax_default RBRACE
    (29) switch_statement -> . SWITCH LPAREN NAME RPAREN LBRACE body_case sintax_default RBRACE

    COD_COMMENT     shift and go to state 10
    COMMENT_MONOLINE shift and go to state 11
    FLOAT           shift and go to state 12
    INT             shift and go to state 13
    CHAR            shift and go to state 14
    FOR             shift and go to state 15
    WHILE           shift and go to state 16
    IF              shift and go to state 17
    SWITCH          shift and go to state 18

    program                        shift and go to state 1
    variable_Declaration           shift and go to state 2
    statement                      shift and go to state 3
    comment                        shift and go to state 4
    type                           shift and go to state 5
    for_statement                  shift and go to state 6
    while_statement                shift and go to state 7
    if_statement                   shift and go to state 8
    switch_statement               shift and go to state 9

state 1

    (0) S' -> program .
    (1) program -> program . program
    (1) program -> . program program
    (2) program -> . variable_Declaration
    (3) program -> . statement
    (4) program -> . comment
    (11) variable_Declaration -> . type sequence_variable SEMICOLON
    (5) statement -> . for_statement
    (6) statement -> . while_statement
    (7) statement -> . if_statement
    (8) statement -> . switch_statement
    (9) comment -> . COD_COMMENT
    (10) comment -> . COMMENT_MONOLINE
    (12) type -> . FLOAT
    (13) type -> . INT
    (14) type -> . CHAR
    (26) for_statement -> . FOR LPAREN type NAME ASSIGN expression SEMICOLON expression SEMICOLON down_up RPAREN LBRACE block RBRACE
    (25) while_statement -> . WHILE LPAREN expression RPAREN LBRACE block RBRACE
    (23) if_statement -> . IF LPAREN expression RPAREN LBRACE block RBRACE ELSE LBRACE block RBRACE
    (24) if_statement -> . IF LPAREN expression RPAREN LBRACE block RBRACE
    (27) switch_statement -> . SWITCH LPAREN NAME RPAREN LBRACE body_case body_case body_case sintax_default RBRACE
    (28) switch_statement -> . SWITCH LPAREN NAME RPAREN LBRACE body_case body_case sintax_default RBRACE
    (29) switch_statement -> . SWITCH LPAREN NAME RPAREN LBRACE body_case sintax_default RBRACE

    COD_COMMENT     shift and go to state 10
    COMMENT_MONOLINE shift and go to state 11
    FLOAT           shift and go to state 12
    INT             shift and go to state 13
    CHAR            shift and go to state 14
    FOR             shift and go to state 15
    WHILE           shift and go to state 16
    IF              shift and go to state 17
    SWITCH          shift and go to state 18

    program                        shift and go to state 19
    variable_Declaration           shift and go to state 2
    statement                      shift and go to state 3
    comment                        shift and go to state 4
    type                           shift and go to state 5
    for_statement                  shift and go to state 6
    while_statement                shift and go to state 7
    if_statement                   shift and go to state 8
    switch_statement               shift and go to state 9

state 2

    (2) program -> variable_Declaration .

    COD_COMMENT     reduce using rule 2 (program -> variable_Declaration .)
    COMMENT_MONOLINE reduce using rule 2 (program -> variable_Declaration .)
    FLOAT           reduce using rule 2 (program -> variable_Declaration .)
    INT             reduce using rule 2 (program -> variable_Declaration .)
    CHAR            reduce using rule 2 (program -> variable_Declaration .)
    FOR             reduce using rule 2 (program -> variable_Declaration .)
    WHILE           reduce using rule 2 (program -> variable_Declaration .)
    IF              reduce using rule 2 (program -> variable_Declaration .)
    SWITCH          reduce using rule 2 (program -> variable_Declaration .)
    $end            reduce using rule 2 (program -> variable_Declaration .)


state 3

    (3) program -> statement .

    COD_COMMENT     reduce using rule 3 (program -> statement .)
    COMMENT_MONOLINE reduce using rule 3 (program -> statement .)
    FLOAT           reduce using rule 3 (program -> statement .)
    INT             reduce using rule 3 (program -> statement .)
    CHAR            reduce using rule 3 (program -> statement .)
    FOR             reduce using rule 3 (program -> statement .)
    WHILE           reduce using rule 3 (program -> statement .)
    IF              reduce using rule 3 (program -> statement .)
    SWITCH          reduce using rule 3 (program -> statement .)
    $end            reduce using rule 3 (program -> statement .)


state 4

    (4) program -> comment .

    COD_COMMENT     reduce using rule 4 (program -> comment .)
    COMMENT_MONOLINE reduce using rule 4 (program -> comment .)
    FLOAT           reduce using rule 4 (program -> comment .)
    INT             reduce using rule 4 (program -> comment .)
    CHAR            reduce using rule 4 (program -> comment .)
    FOR             reduce using rule 4 (program -> comment .)
    WHILE           reduce using rule 4 (program -> comment .)
    IF              reduce using rule 4 (program -> comment .)
    SWITCH          reduce using rule 4 (program -> comment .)
    $end            reduce using rule 4 (program -> comment .)


state 5

    (11) variable_Declaration -> type . sequence_variable SEMICOLON
    (15) sequence_variable -> . variable_characteristics COMMA sequence_variable
    (16) sequence_variable -> . variable_characteristics
    (17) variable_characteristics -> . NAME LCOLC NUMBER RCOLC
    (18) variable_characteristics -> . NAME ASSIGN expression
    (19) variable_characteristics -> . NAME ASSIGN NUMBER POINT NUMBER
    (20) variable_characteristics -> . NAME ASSIGN NUMBER
    (21) variable_characteristics -> . NAME
    (22) variable_characteristics -> . expression
    (38) expression -> . expression BIGGER expression
    (39) expression -> . expression SMALLER expression
    (40) expression -> . expression BIGGEREQUALS expression
    (41) expression -> . expression SMALLEREQUALS expression
    (42) expression -> . expression EQUALS expression
    (43) expression -> . expression DIFF expression
    (44) expression -> . expression AND expression
    (45) expression -> . expression OR expression
    (46) expression -> . expression PLUS expression
    (47) expression -> . expression MINUS expression
    (48) expression -> . expression TIMES expression
    (49) expression -> . expression DIVIDE expression
    (50) expression -> . variable SUMEQUALS expression
    (51) expression -> . variable MINUSEQUALS expression
    (52) expression -> . variable TIMESEQUALS expression
    (53) expression -> . variable DIVIDEEQUALS expression
    (54) expression -> . literal
    (55) expression -> . variable
    (58) variable -> . NAME
    (56) literal -> . NORMALSTRING
    (57) literal -> . NUMBER

    NAME            shift and go to state 22
    NORMALSTRING    shift and go to state 27
    NUMBER          shift and go to state 23

    sequence_variable              shift and go to state 20
    variable_characteristics       shift and go to state 21
    expression                     shift and go to state 24
    variable                       shift and go to state 25
    literal                        shift and go to state 26

state 6

    (5) statement -> for_statement .

    COD_COMMENT     reduce using rule 5 (statement -> for_statement .)
    COMMENT_MONOLINE reduce using rule 5 (statement -> for_statement .)
    FLOAT           reduce using rule 5 (statement -> for_statement .)
    INT             reduce using rule 5 (statement -> for_statement .)
    CHAR            reduce using rule 5 (statement -> for_statement .)
    FOR             reduce using rule 5 (statement -> for_statement .)
    WHILE           reduce using rule 5 (statement -> for_statement .)
    IF              reduce using rule 5 (statement -> for_statement .)
    SWITCH          reduce using rule 5 (statement -> for_statement .)
    $end            reduce using rule 5 (statement -> for_statement .)


state 7

    (6) statement -> while_statement .

    COD_COMMENT     reduce using rule 6 (statement -> while_statement .)
    COMMENT_MONOLINE reduce using rule 6 (statement -> while_statement .)
    FLOAT           reduce using rule 6 (statement -> while_statement .)
    INT             reduce using rule 6 (statement -> while_statement .)
    CHAR            reduce using rule 6 (statement -> while_statement .)
    FOR             reduce using rule 6 (statement -> while_statement .)
    WHILE           reduce using rule 6 (statement -> while_statement .)
    IF              reduce using rule 6 (statement -> while_statement .)
    SWITCH          reduce using rule 6 (statement -> while_statement .)
    $end            reduce using rule 6 (statement -> while_statement .)


state 8

    (7) statement -> if_statement .

    COD_COMMENT     reduce using rule 7 (statement -> if_statement .)
    COMMENT_MONOLINE reduce using rule 7 (statement -> if_statement .)
    FLOAT           reduce using rule 7 (statement -> if_statement .)
    INT             reduce using rule 7 (statement -> if_statement .)
    CHAR            reduce using rule 7 (statement -> if_statement .)
    FOR             reduce using rule 7 (statement -> if_statement .)
    WHILE           reduce using rule 7 (statement -> if_statement .)
    IF              reduce using rule 7 (statement -> if_statement .)
    SWITCH          reduce using rule 7 (statement -> if_statement .)
    $end            reduce using rule 7 (statement -> if_statement .)


state 9

    (8) statement -> switch_statement .

    COD_COMMENT     reduce using rule 8 (statement -> switch_statement .)
    COMMENT_MONOLINE reduce using rule 8 (statement -> switch_statement .)
    FLOAT           reduce using rule 8 (statement -> switch_statement .)
    INT             reduce using rule 8 (statement -> switch_statement .)
    CHAR            reduce using rule 8 (statement -> switch_statement .)
    FOR             reduce using rule 8 (statement -> switch_statement .)
    WHILE           reduce using rule 8 (statement -> switch_statement .)
    IF              reduce using rule 8 (statement -> switch_statement .)
    SWITCH          reduce using rule 8 (statement -> switch_statement .)
    $end            reduce using rule 8 (statement -> switch_statement .)


state 10

    (9) comment -> COD_COMMENT .

    COD_COMMENT     reduce using rule 9 (comment -> COD_COMMENT .)
    COMMENT_MONOLINE reduce using rule 9 (comment -> COD_COMMENT .)
    FLOAT           reduce using rule 9 (comment -> COD_COMMENT .)
    INT             reduce using rule 9 (comment -> COD_COMMENT .)
    CHAR            reduce using rule 9 (comment -> COD_COMMENT .)
    FOR             reduce using rule 9 (comment -> COD_COMMENT .)
    WHILE           reduce using rule 9 (comment -> COD_COMMENT .)
    IF              reduce using rule 9 (comment -> COD_COMMENT .)
    SWITCH          reduce using rule 9 (comment -> COD_COMMENT .)
    $end            reduce using rule 9 (comment -> COD_COMMENT .)


state 11

    (10) comment -> COMMENT_MONOLINE .

    COD_COMMENT     reduce using rule 10 (comment -> COMMENT_MONOLINE .)
    COMMENT_MONOLINE reduce using rule 10 (comment -> COMMENT_MONOLINE .)
    FLOAT           reduce using rule 10 (comment -> COMMENT_MONOLINE .)
    INT             reduce using rule 10 (comment -> COMMENT_MONOLINE .)
    CHAR            reduce using rule 10 (comment -> COMMENT_MONOLINE .)
    FOR             reduce using rule 10 (comment -> COMMENT_MONOLINE .)
    WHILE           reduce using rule 10 (comment -> COMMENT_MONOLINE .)
    IF              reduce using rule 10 (comment -> COMMENT_MONOLINE .)
    SWITCH          reduce using rule 10 (comment -> COMMENT_MONOLINE .)
    $end            reduce using rule 10 (comment -> COMMENT_MONOLINE .)


state 12

    (12) type -> FLOAT .

    NAME            reduce using rule 12 (type -> FLOAT .)
    NORMALSTRING    reduce using rule 12 (type -> FLOAT .)
    NUMBER          reduce using rule 12 (type -> FLOAT .)


state 13

    (13) type -> INT .

    NAME            reduce using rule 13 (type -> INT .)
    NORMALSTRING    reduce using rule 13 (type -> INT .)
    NUMBER          reduce using rule 13 (type -> INT .)


state 14

    (14) type -> CHAR .

    NAME            reduce using rule 14 (type -> CHAR .)
    NORMALSTRING    reduce using rule 14 (type -> CHAR .)
    NUMBER          reduce using rule 14 (type -> CHAR .)


state 15

    (26) for_statement -> FOR . LPAREN type NAME ASSIGN expression SEMICOLON expression SEMICOLON down_up RPAREN LBRACE block RBRACE

    LPAREN          shift and go to state 28


state 16

    (25) while_statement -> WHILE . LPAREN expression RPAREN LBRACE block RBRACE

    LPAREN          shift and go to state 29


state 17

    (23) if_statement -> IF . LPAREN expression RPAREN LBRACE block RBRACE ELSE LBRACE block RBRACE
    (24) if_statement -> IF . LPAREN expression RPAREN LBRACE block RBRACE

    LPAREN          shift and go to state 30


state 18

    (27) switch_statement -> SWITCH . LPAREN NAME RPAREN LBRACE body_case body_case body_case sintax_default RBRACE
    (28) switch_statement -> SWITCH . LPAREN NAME RPAREN LBRACE body_case body_case sintax_default RBRACE
    (29) switch_statement -> SWITCH . LPAREN NAME RPAREN LBRACE body_case sintax_default RBRACE

    LPAREN          shift and go to state 31


state 19

    (1) program -> program program .
    (1) program -> program . program
    (1) program -> . program program
    (2) program -> . variable_Declaration
    (3) program -> . statement
    (4) program -> . comment
    (11) variable_Declaration -> . type sequence_variable SEMICOLON
    (5) statement -> . for_statement
    (6) statement -> . while_statement
    (7) statement -> . if_statement
    (8) statement -> . switch_statement
    (9) comment -> . COD_COMMENT
    (10) comment -> . COMMENT_MONOLINE
    (12) type -> . FLOAT
    (13) type -> . INT
    (14) type -> . CHAR
    (26) for_statement -> . FOR LPAREN type NAME ASSIGN expression SEMICOLON expression SEMICOLON down_up RPAREN LBRACE block RBRACE
    (25) while_statement -> . WHILE LPAREN expression RPAREN LBRACE block RBRACE
    (23) if_statement -> . IF LPAREN expression RPAREN LBRACE block RBRACE ELSE LBRACE block RBRACE
    (24) if_statement -> . IF LPAREN expression RPAREN LBRACE block RBRACE
    (27) switch_statement -> . SWITCH LPAREN NAME RPAREN LBRACE body_case body_case body_case sintax_default RBRACE
    (28) switch_statement -> . SWITCH LPAREN NAME RPAREN LBRACE body_case body_case sintax_default RBRACE
    (29) switch_statement -> . SWITCH LPAREN NAME RPAREN LBRACE body_case sintax_default RBRACE

  ! shift/reduce conflict for COD_COMMENT resolved as shift
  ! shift/reduce conflict for COMMENT_MONOLINE resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for CHAR resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for SWITCH resolved as shift
    $end            reduce using rule 1 (program -> program program .)
    COD_COMMENT     shift and go to state 10
    COMMENT_MONOLINE shift and go to state 11
    FLOAT           shift and go to state 12
    INT             shift and go to state 13
    CHAR            shift and go to state 14
    FOR             shift and go to state 15
    WHILE           shift and go to state 16
    IF              shift and go to state 17
    SWITCH          shift and go to state 18

  ! COD_COMMENT     [ reduce using rule 1 (program -> program program .) ]
  ! COMMENT_MONOLINE [ reduce using rule 1 (program -> program program .) ]
  ! FLOAT           [ reduce using rule 1 (program -> program program .) ]
  ! INT             [ reduce using rule 1 (program -> program program .) ]
  ! CHAR            [ reduce using rule 1 (program -> program program .) ]
  ! FOR             [ reduce using rule 1 (program -> program program .) ]
  ! WHILE           [ reduce using rule 1 (program -> program program .) ]
  ! IF              [ reduce using rule 1 (program -> program program .) ]
  ! SWITCH          [ reduce using rule 1 (program -> program program .) ]

    program                        shift and go to state 19
    variable_Declaration           shift and go to state 2
    statement                      shift and go to state 3
    comment                        shift and go to state 4
    type                           shift and go to state 5
    for_statement                  shift and go to state 6
    while_statement                shift and go to state 7
    if_statement                   shift and go to state 8
    switch_statement               shift and go to state 9

state 20

    (11) variable_Declaration -> type sequence_variable . SEMICOLON

    SEMICOLON       shift and go to state 32


state 21

    (15) sequence_variable -> variable_characteristics . COMMA sequence_variable
    (16) sequence_variable -> variable_characteristics .

    COMMA           shift and go to state 33
    SEMICOLON       reduce using rule 16 (sequence_variable -> variable_characteristics .)


state 22

    (17) variable_characteristics -> NAME . LCOLC NUMBER RCOLC
    (18) variable_characteristics -> NAME . ASSIGN expression
    (19) variable_characteristics -> NAME . ASSIGN NUMBER POINT NUMBER
    (20) variable_characteristics -> NAME . ASSIGN NUMBER
    (21) variable_characteristics -> NAME .
    (58) variable -> NAME .

  ! reduce/reduce conflict for COMMA resolved using rule 21 (variable_characteristics -> NAME .)
  ! reduce/reduce conflict for SEMICOLON resolved using rule 21 (variable_characteristics -> NAME .)
    LCOLC           shift and go to state 34
    ASSIGN          shift and go to state 35
    COMMA           reduce using rule 21 (variable_characteristics -> NAME .)
    SEMICOLON       reduce using rule 21 (variable_characteristics -> NAME .)
    SUMEQUALS       reduce using rule 58 (variable -> NAME .)
    MINUSEQUALS     reduce using rule 58 (variable -> NAME .)
    TIMESEQUALS     reduce using rule 58 (variable -> NAME .)
    DIVIDEEQUALS    reduce using rule 58 (variable -> NAME .)
    BIGGER          reduce using rule 58 (variable -> NAME .)
    SMALLER         reduce using rule 58 (variable -> NAME .)
    BIGGEREQUALS    reduce using rule 58 (variable -> NAME .)
    SMALLEREQUALS   reduce using rule 58 (variable -> NAME .)
    EQUALS          reduce using rule 58 (variable -> NAME .)
    DIFF            reduce using rule 58 (variable -> NAME .)
    AND             reduce using rule 58 (variable -> NAME .)
    OR              reduce using rule 58 (variable -> NAME .)
    PLUS            reduce using rule 58 (variable -> NAME .)
    MINUS           reduce using rule 58 (variable -> NAME .)
    TIMES           reduce using rule 58 (variable -> NAME .)
    DIVIDE          reduce using rule 58 (variable -> NAME .)

  ! COMMA           [ reduce using rule 58 (variable -> NAME .) ]
  ! SEMICOLON       [ reduce using rule 58 (variable -> NAME .) ]


state 23

    (57) literal -> NUMBER .

    BIGGER          reduce using rule 57 (literal -> NUMBER .)
    SMALLER         reduce using rule 57 (literal -> NUMBER .)
    BIGGEREQUALS    reduce using rule 57 (literal -> NUMBER .)
    SMALLEREQUALS   reduce using rule 57 (literal -> NUMBER .)
    EQUALS          reduce using rule 57 (literal -> NUMBER .)
    DIFF            reduce using rule 57 (literal -> NUMBER .)
    AND             reduce using rule 57 (literal -> NUMBER .)
    OR              reduce using rule 57 (literal -> NUMBER .)
    PLUS            reduce using rule 57 (literal -> NUMBER .)
    MINUS           reduce using rule 57 (literal -> NUMBER .)
    TIMES           reduce using rule 57 (literal -> NUMBER .)
    DIVIDE          reduce using rule 57 (literal -> NUMBER .)
    COMMA           reduce using rule 57 (literal -> NUMBER .)
    SEMICOLON       reduce using rule 57 (literal -> NUMBER .)
    RPAREN          reduce using rule 57 (literal -> NUMBER .)
    COLON           reduce using rule 57 (literal -> NUMBER .)


state 24

    (22) variable_characteristics -> expression .
    (38) expression -> expression . BIGGER expression
    (39) expression -> expression . SMALLER expression
    (40) expression -> expression . BIGGEREQUALS expression
    (41) expression -> expression . SMALLEREQUALS expression
    (42) expression -> expression . EQUALS expression
    (43) expression -> expression . DIFF expression
    (44) expression -> expression . AND expression
    (45) expression -> expression . OR expression
    (46) expression -> expression . PLUS expression
    (47) expression -> expression . MINUS expression
    (48) expression -> expression . TIMES expression
    (49) expression -> expression . DIVIDE expression

    COMMA           reduce using rule 22 (variable_characteristics -> expression .)
    SEMICOLON       reduce using rule 22 (variable_characteristics -> expression .)
    BIGGER          shift and go to state 36
    SMALLER         shift and go to state 37
    BIGGEREQUALS    shift and go to state 38
    SMALLEREQUALS   shift and go to state 39
    EQUALS          shift and go to state 40
    DIFF            shift and go to state 41
    AND             shift and go to state 42
    OR              shift and go to state 43
    PLUS            shift and go to state 44
    MINUS           shift and go to state 45
    TIMES           shift and go to state 46
    DIVIDE          shift and go to state 47


state 25

    (50) expression -> variable . SUMEQUALS expression
    (51) expression -> variable . MINUSEQUALS expression
    (52) expression -> variable . TIMESEQUALS expression
    (53) expression -> variable . DIVIDEEQUALS expression
    (55) expression -> variable .

    SUMEQUALS       shift and go to state 48
    MINUSEQUALS     shift and go to state 49
    TIMESEQUALS     shift and go to state 50
    DIVIDEEQUALS    shift and go to state 51
    BIGGER          reduce using rule 55 (expression -> variable .)
    SMALLER         reduce using rule 55 (expression -> variable .)
    BIGGEREQUALS    reduce using rule 55 (expression -> variable .)
    SMALLEREQUALS   reduce using rule 55 (expression -> variable .)
    EQUALS          reduce using rule 55 (expression -> variable .)
    DIFF            reduce using rule 55 (expression -> variable .)
    AND             reduce using rule 55 (expression -> variable .)
    OR              reduce using rule 55 (expression -> variable .)
    PLUS            reduce using rule 55 (expression -> variable .)
    MINUS           reduce using rule 55 (expression -> variable .)
    TIMES           reduce using rule 55 (expression -> variable .)
    DIVIDE          reduce using rule 55 (expression -> variable .)
    COMMA           reduce using rule 55 (expression -> variable .)
    SEMICOLON       reduce using rule 55 (expression -> variable .)
    RPAREN          reduce using rule 55 (expression -> variable .)
    COLON           reduce using rule 55 (expression -> variable .)


state 26

    (54) expression -> literal .
